Add plots for critic learning rate 0.003 and learning actor 0.0003

--- a/configs/agent4.yaml
+++ b/configs/agent4.yaml
@@ -4,9 +4,12 @@ env_name: "CartPole-v1"
 K: 6
 n_steps: 6
 stochastic_rewards: true
-lr_actor: 0.0003  
-lr_critic: 0.003 
+lr_actor: 0.00001  
+lr_critic: 0.001 
 gamma: 0.99
 max_steps: 500000
 entropy_coef: 0.01
 eval_freq: 20000
+
+# lr_actor: 0.0003  
+# lr_critic: 0.003
